fixed to dropdown and div overlap

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 html{
     overflow-x: hidden;
+    
     scroll-behavior: smooth;
 }
 
@@ -24,6 +25,7 @@ nav{
     width: 100%;
     height: 10vh;
     position: fixed;
+    top: 0px;
 }
 
 
@@ -112,8 +114,8 @@ nav{
 
 .dropdown{
     z-index: 100;
-    position: absolute;
-    top: 0;
+    position: fixed;
+    bottom: 3;
     transform: translateY(-500px);
     width: 100%;
     height: auto;
@@ -138,7 +140,7 @@ nav{
 
 section{
     width: 100%;
-    height: 90vh;
+    min-height: 90vh;
 }
 
 .main-container {
@@ -156,7 +158,8 @@ section{
 }
 
 .main-container .image img{
-    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 
 .main-container .content{
@@ -164,6 +167,7 @@ section{
     width: 40%;
     min-height: 100px;
     margin-top: 2cm;
+    
 }
 
 .content h1{
@@ -418,6 +422,7 @@ section{
     }
 
     .main-container .content{
+        order: 1;
         width: 80%;
     }
 
@@ -433,6 +438,9 @@ section{
     .main-container .image{
         width: 80%;
         margin-bottom: 0px;
+    }
+    .project-main{
+        order:2;
     }
 }
 
